[tool.poetry]
name = "to_do_list"
version = "0.0.1"
description = ""
authors = ["VanVuVuong <vanvuvuong3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.35"
fastapi = "^0.75.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
